# ------------------------------ Poetry settings ----------------------------- #

[tool.poetry]
name = "acat"
version = "0.1.0"
description = "Adrian Carreno's AWS Toolkit"
authors = ["Adrián Carreño <adriancarreno.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
boto3 = { extras = ["ssm", "stepfunctions"], version = "^1.35.23" }
boto3-stubs = "^1.35.5"
botocore = "^1.35.5"
botocore-stubs = "^1.35.5"
mypy-boto3-ssm = "^1.35.0"
mypy-boto3-stepfunctions = "^1.35.9"
loguru = "^0.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ruff = "^0.6.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
moto = { extras = ["ssm"], version = "^5.0.14" }
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"

[tool.poetry.scripts]
acat = "acat.cli:cli"

# ------------------------------- Ruff settings ------------------------------ #

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["acat"]

# ------------------------------ Pytest settings ----------------------------- #

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
env = ["AWS_DEFAULT_REGION=us-east-1", "LOGURU_LOG_LEVEL=DEBUG"]

[tool.coverage.run]
branch = true
source = ["acat"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
precision = 2
omit = ["__init__.py", "acat/cli.py"]
