# -------------------------------- UV settings ------------------------------- #

[project]
name = "acat"
version = "0.2.0"
description = "Adrian Carreno's AWS Toolkit"
readme = "README.md"
authors = [
    { name = "Adrian Carreno", email = "AdrianCarreno@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.11",
    "boto3-stubs>=1.37.11",
    "click>=8.1.8",
    "loguru>=0.7.3",
    "mypy-boto3-ssm>=1.37.4",
]

[dependency-groups]
dev = ["ipython>=8.34.0", "ruff>=0.9.10"]
test = [
    "moto>=5.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]


[project.scripts]
acat = "acat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------------- Ruff settings ------------------------------ #

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ARG001"]

[tool.ruff.lint.isort]
force-single-line = true

# ------------------------------ Pytest settings ----------------------------- #

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
env = ["AWS_DEFAULT_REGION=us-east-1"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
precision = 2
omit = ["__init__.py", "src/acat/cli.py"]
